initial commit for productionizing in PythonAnywhere

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -37,13 +37,15 @@
 
 		<h4>Project Description:</h4>
 		<p>In this project I've used feature selection techniques to select the important 
-			feature which later used for training the model. Use the technique 25 columns 
-			important columns out of 81 were selected.
+			feature which later used for training the model. Using the technique 25 columns 
+			important columns(predictors) out of 81 were selected for predicting the target(house price). 
 		 Features were selected particularly for randomforest regressor model.
+
+		 You can use the Prediction model table to test the model.
 			<strong></strong> </p>
 
 		<br>
-		<a href="https://github.com/Mattobad/House-Price-Prediction-Regression">Github link repo of the project</a>
+		<a href="https://bit.ly/house-rg-project">Github link repo of the project</a>
 		<br><br>
 		<p>Data Dictinary of the data used to trained the model.
 			Button to show details.
@@ -60,16 +62,6 @@
 		<p><strong>Contact: </strong>Sarbottam.Thapa.Magar@gmail.com</p>
 	</footer>
 
-	<!-- <style>
-		footer-home {
-			position: absolute;
-			top:90%;
-			width: 100%;
-			text-align: center;
-			padding: 3px;
-			background-color: #222222;
-			color: white;
-		}
-    </style> -->
+
 </body>
 </html>
